objects/Case_Review__c.object
<CustomObject>
    <description>Capture case reviews performed by Escalation leads</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Reviews</relationshipLabel>
        <relationshipName>Case_Review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Capture status of the case when the review is completed.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Review</label>
    <nameField>
        <displayFormat>CaseRev-{00000}</displayFormat>
        <label>Case Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Review</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>